# ast-interpreter

./: ASTInterpreter.cpp  CMakeLists.txt  Dockerfile  Environment.h  README.md  grade.sh
extests/: test010.c  test011.c  test012.c  test013.c  test014.c  test015.c  test016.c  test017.c  test120.c  test150.c  test170.c  test171.c  test172.c  test180.c  test181.c  test182.c  test210.c  test220.c  test221.c  test222.c
tests/: test.c
